Show room y formato
- Nueva vista: SHOW Room

- En index se deja solo lo más importante

- Reestructuración y formato

--- a/views/rooms/edit.ejs
+++ b/views/rooms/edit.ejs
@@ -160,7 +160,7 @@
             <button type="submit" class="btn btn-primary">Save Changes</button>
 
             <!-- Botón para ir atrás -->
-            <a href="/rooms" class="btn btn-outline-dark">Cancel</a>
+            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
             
         </form>
         <br>
