--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 
-<h1>Welcome to MiniProject</h1>
+<h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Welcome to my project</h1>
 
-<p>Description: ...</p>
+<br>
+
+<h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px">Eva Barba Cámara</h4>
